[package]
name = "dmg"
version = "0.1.2"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Maciej Goszczycki <mgoszcz2@gmail.com>"]
readme = "README.md"
description = "Simple attaching/detaching of macOS disk images"
repository = "https://github.com/mgoszcz2/dmg"
homepage = "https://github.com/mgoszcz2/dmg"
documentation = "https://docs.rs/dmg/"
keywords = ["dmg", "file", "mount", "osx"]

[dependencies]
plist = { version = "1.3.1", default-features = false }
log = "0.4.17"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name = "demo"
