[package]
name = "dmg"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Maciej Goszczycki <hi@maciej.ie>"]
readme = "README.md"
description = "Simple attaching, detaching, and creation of macOS disk images"
repository = "https://github.com/maciej-irl/dmg"
homepage = "https://github.com/maciej-irl/dmg"
documentation = "https://docs.rs/dmg/"
keywords = ["dmg", "file", "mount", "osx", "mac", "macos"]

[dependencies]
plist = { version = "1.3.1", default-features = false }
log = "0.4.17"
tempfile = "3"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name = "demo"
